--- a/helm-charts/falcon-kac/templates/deployment_webhook.yaml
+++ b/helm-charts/falcon-kac/templates/deployment_webhook.yaml
@@ -127,6 +127,10 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: spec.nodeName
+{{- if .Values.falconImageAnalyzer.namespace }}
+        - name: __CS_IAR_NAMESPACE
+          value: {{ .Values.falconImageAnalyzer.namespace | quote }}
+{{- end }}
         envFrom:
         - configMapRef:
             name: {{ include "falcon-kac.fullname" . }}-config
